--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,4 +1,17 @@
 .layout {
   display: flex;
-  
+   
+  height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+
+
+}
+
+.container{
+	/*background-color: red;*/
+
+	overflow-y: scroll;
+
+	width: 100%;
 }
