--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,24 @@ code {
 html,
 body {
   background-color: #000;
+
+
+}
+
+.btn-outline{
+  border: 1px solid #f1f1f1; 
+
+  background-color: transparent;
+
+color: white;
+  padding: 10px;
+
+  cursor: pointer;
+
+}
+
+.btn-outline:hover{
+  background-color: white;
+
+  color: #000;
 }
