--- a/src/index.css
+++ b/src/index.css
@@ -19,24 +19,41 @@ code {
 html,
 body {
   background-color: #000;
-
-
 }
 
-.btn-outline{
-  border: 1px solid #f1f1f1; 
+.btn-outline {
+  border: 1px solid #f1f1f1;
 
   background-color: transparent;
 
-color: white;
+  color: white;
+  padding: 10px;
+
+  cursor: pointer;
+}
+
+.btn-outline:hover {
+  background-color: white;
+
+  color: #000;
+}
+
+.btn {
+  border: 1px solid white;
   padding: 10px;
 
   cursor: pointer;
 
-}
-
-.btn-outline:hover{
   background-color: white;
-
   color: #000;
+
+}
+.btn:hover {
+  background-color: #000;
+
+  color: white;
+}
+.overlay{
+  background-color: rgba(0, 0, 0,.7);
+  border: 1px solid rgba(0, 0, 0,.7);
 }
