--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -21,26 +21,26 @@
   color: #f1f1f1;
   padding: 100px;
 
-  width: 50%;
+  width: 70%;
 }
 
-.banner__text h1{
-font-size: 1.5em;
+.banner__text h1 {
+  font-size: 2em;
 }
 .banner__text p {
-  font-size: .8em;
+  font-size: 0.8em;
   display: block;
   padding: 20px 0;
 }
-@media(max-width: 500px){
+@media (max-width: 500px) {
   .banner__text {
-  color: #f1f1f1;
-  padding: 100px;
+    color: #f1f1f1;
+    padding: 100px;
 
-  width: 80%;
-}
+    width: 80%;
+  }
 }
 .movies_container {
-    padding: 40px 20px;
-  background-color: rgba(18,18,18,.7);
+  padding: 40px 20px;
+  background-color: rgba(18, 18, 18, 0.7);
 }
