agrege los trailers de las peliculas - termine la configuracion de los parametros or url, agrege el componente ModalTrailer y modifique algunos estilos

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -5,7 +5,7 @@
 .home_screen__banner {
   /* background-color: blue; */
   height: 400px;
-  background-position: top center;
+  background-position: to center;
   background-size: cover;
   background-repeat: no-repeat;
 }
