--- a/src/index.css
+++ b/src/index.css
@@ -46,14 +46,20 @@ body {
 
   background-color: white;
   color: #000;
-
 }
 /*.btn:hover {
   background-color: #000;
 
   color: white;
 }*/
-.overlay{
-  background-color: rgba(0, 0, 0,.7);
-  border: 1px solid rgba(0, 0, 0,.7);
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0.7);
+}
+
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.9) !important;
+}
+
+.ReactModal__Overlay--after-open {
 }
