--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -5,22 +5,14 @@
 .home_screen__banner {
   /* background-color: blue; */
   height: 400px;
-  background-position: to center;
+  background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-/*.home-screen__banner:before{
-  content: "";
-  display:block;
-  height: 100%;
-  widows: 100%;
-  position: absolute;
-  top:0; 
-}*/
 .banner__text {
   color: #f1f1f1;
-  padding: 100px;
-
+  padding: 60px;
+  height: 100%;
   width: 70%;
 }
 
@@ -31,15 +23,23 @@
   font-size: 0.8em;
   display: block;
   padding: 20px 0;
-}
-@media (max-width: 500px) {
-  .banner__text {
-    color: #f1f1f1;
-    padding: 100px;
 
-    width: 80%;
-  }
 }
+
+@media(max-width: 600px){
+.home_screen__banner {
+
+  height: 100vh;
+}
+  .banner__text {
+  color: #f1f1f1;
+  padding: 60px 5%;
+  padding-top: 50%;
+  width: 100%;
+
+}
+}
+
 .movies_container {
   padding: 40px 20px;
   background-color: rgba(18, 18, 18, 0.7);
