--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -2,6 +2,8 @@
   color: white;
   height: 100vh;
   width: 100%;
+  height: 100vh;
+ 
 }
 .search__header {
   height: auto;
@@ -52,4 +54,9 @@
 .movies_container {
   padding: 40px 20px;
   background-color: rgba(18, 18, 18, 0.7);
+
+  display: flex;
+
+  flex-wrap: wrap;
 }
+
