--- a/src/pages/movie/movie.css
+++ b/src/pages/movie/movie.css
@@ -68,7 +68,12 @@ img {
   color: #f1f1f1;
   font-weight: lighter;
 }
-
+.seasons{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  
+}
 @media(max-width: 650px){
   .hero{
     flex-direction: column-reverse;
