--- a/src/components/Loading/index.css
+++ b/src/components/Loading/index.css
@@ -1,15 +1,11 @@
-.loading-page {
+.loading {
   display: flex;
-
   justify-content: center;
+  align-items: center;
 
-  height: 100vh;
-
+  height: 100%;
   width: 100%;
-
   background-color: transparent;
-
-  padding-top: 60px;
 }
 
 h2 {
