--- a/src/components/PosterMovie/poster.css
+++ b/src/components/PosterMovie/poster.css
@@ -6,12 +6,15 @@ div.poster_movie {
   margin: 10px;
 
   transition: transform 0.3s;
+
+  /*background-color: yellow;*/
 }
 div.poster_movie:hover {
   transform: scale(1.08);
 }
 img {
   width: 100%;
+  min-width: 100%;
   height: 100%;
   object-fit: cover;
 }
