--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+/*  border: 1px solid red;*/
 }
 html,
 body {
