--- a/src/components/RowMovies/row.module.css
+++ b/src/components/RowMovies/row.module.css
@@ -13,7 +13,7 @@
   display: flex;
   overflow-x: scroll;
   overflow-y: hidden;
-
+  scroll-behavior: smooth;
   /*background-color: yellow;*/
 }
 .posters_container::-webkit-scrollbar {
